# james-code

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: DOCUMENTATION_PROCESS.md
docs/adr/: 0001-use-architecture-decision-records.md  0002-agent-architecture-design.md  0003-tool-system-design.md  0004-safety-and-sandboxing-approach.md  0005-mcp-protocol-compatibility.md  0006-additional-fundamental-tools.md  0007-hybrid-documentation-framework.md  0008-dependency-management-and-packaging.md  0009-testing-implementation-strategy.md  0010-llm-driven-architecture.md  0010-todo-first-architecture-migration.md
docs/adr/archived/: 0007-hybrid-documentation-framework.md
docs/adr/archived/testing/: TESTING_PROGRESS.md
docs/adr/archived/testing/phase-checklists/: phase-1-checklist.md  phase-2-checklist.md  phase-4-checklist.md
docs/adr/archived/testing/session-notes/: session-002-phase1.md  session-003-phase2.md  session-004-phase3.md
docs/implementation/: todo-first-migration-guide.md
docs/testing/phase-checklists/: phase-3-checklist.md
docs/testing/session-notes/: session-001-phase1.md  session-template.md
docs/tools/: README.md
docs/tools/concepts/: file-operations.md  search-and-discovery.md  security-model.md  task-management.md
docs/tools/examples/: README.md
docs/tools/examples/workflows/: file_operations_workflow.py
examples/: advanced_example.py  basic_usage.py  presentation_demo.py  presentation_llm_provider.py
scripts/: generate_docs.py  version.py
src/james_code/: __init__.py  cli.py
src/james_code/core/: __init__.py  agent.py  base.py
src/james_code/llm/: __init__.py  openai_provider.py
src/james_code/safety/: __init__.py  safety_manager.py
src/james_code/tools/: __init__.py  execute_tool.py  find_tool.py  read_tool.py  task_tool.py  todo_tool.py  update_tool.py  write_tool.py
tests/: __init__.py  conftest.py  test_infrastructure.py  test_infrastructure_simple.py  test_phase1_session2.py
tests/fixtures/: complex_scenarios.py  security_vectors.py
tests/integration/: __init__.py  test_advanced_workflows.py  test_tool_integration.py
tests/mocks/: __init__.py  llm_mock.py
tests/performance/: __init__.py  assertions.py  benchmarks.py  metrics.py
tests/scripts/: test_schemas.py
tests/unit/: __init__.py  test_imports.py
tests/unit/core/: test_agent.py
tests/unit/tools/: test_execute_tool_security.py  test_find_tool_comprehensive.py  test_read_tool.py  test_task_tool_basic.py  test_todo_tool_basic.py  test_update_tool_basic.py  test_write_tool_comprehensive.py
tests/utils/: __init__.py  assertion_helpers.py  filesystem_helpers.py  process_helpers.py  security_helpers.py
